--- a/aionbook_theme/css/learning.css
+++ b/aionbook_theme/css/learning.css
@@ -127,6 +127,7 @@
 
 /* Tablet (768px and below) */
 @media screen and (max-width: 767px) {
+  
     .learning-system__title {
         font-size: 28px;
         line-height: 40px;
@@ -152,6 +153,10 @@
 
 /* Mobile (480px and below) */
 @media screen and (max-width: 480px) {
+  .learning-system__inner {
+    max-width: 100%;
+  padding: 0;}
+
     .learning-system__title {
         font-size: 24px;
         line-height: 32px;
