--- a/aionbook_theme/css/pages.css
+++ b/aionbook_theme/css/pages.css
@@ -293,7 +293,7 @@
     }
 
     .main__inner_title {
-      width: 131px;
+      width: 283px;
       height: 28px;
       align-items: center; 
       margin: 0;
@@ -306,6 +306,7 @@
       font-weight: 800;
       line-height: 52.21px;
       letter-spacing: -0.04em;
+      margin-bottom: 0;
     }
     .main__inner_title_text {
       font-family: 'Pretendard';
@@ -313,19 +314,24 @@
       font-weight: 500;
       line-height: 21.48px;
       letter-spacing: -0.03em;
+      margin-top: 10px;
     }
     .main__button-wrap {
+      width: 100%;
+      height: 33px;
       flex-direction: row;
       align-items: center;
       gap: 15px;
       margin-right: 0;
+      margin-top:22px;
+
     }
     .hero-btn {
       width: 100%;
+      height: 100%;
       max-width: 200px;
-
+      padding: 0; 
     } .book-wrapper {
-
       width: 100%;
       height: 400px;
       margin-bottom: 0;
