--- a/aionbook_theme/css/pages.css
+++ b/aionbook_theme/css/pages.css
@@ -26,7 +26,6 @@
   flex-direction: column;
   align-items: center;
   position: relative; /* 다른 섹션과 겹치지 않도록 상대 위치 지정 */
-
   margin-bottom: 58px;/* learning-system 섹션과의 간격 */
   top: 60px; 
   z-index: 5; /* 다른 요소들과 겹치지 않도록 z-index 설정 */
@@ -38,9 +37,8 @@
   position: relative;
   display: flex;
   background-color: #465ff1; /* 배경 색상 */
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  gap: 400px;
   margin: 0 auto; /* 중앙 정렬 */
   overflow: hidden; /* 내부 요소 넘침 방지 */
   z-index: 1; /* mobile header와 겹치지 않도록 z-index 설정 */
@@ -203,8 +201,6 @@
   width: 455px;
   height: 247px;
   z-index: 15; /* bookbgimg보다 앞에 배치 */
-}
-
 /* bookbgimg 배경 이미지 */
 .bookbgimg {
   position: absolute;
@@ -380,6 +376,9 @@
   }
   /* 모바일 미디어 쿼리 (max-width 480px) */
 @media screen and (max-width: 480px) {
+  .main__inner {
+    flex-direction: column-reverse;
+  }
   .book-wrapper {
     order: -1; /* 이미지가 텍스트보다 위로 오도록 설정 */
   }
