fix school group

--- a/aionbook_theme/css/chaptercontent.css
+++ b/aionbook_theme/css/chaptercontent.css
@@ -250,30 +250,8 @@ body {
 .locked {
     position: relative;
 }
+/* .locked::after {} 는 coursegrid.css에서 중복 */
 
-/* 잠금화면 배경 */
-.locked::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 48px;
-  color: white;
-}
-/* 잠금화면 png */
-.locked::after {
-background-image: url('../images/home/lock.png');
-background-size: 64px 64px;
-background-repeat: no-repeat;
-background-position: center;
-content: '';
-}
 
 @media screen and (max-width: 767px) {
   
